LIBSEMA=${LIBSEMA}


SUBDIRS = src 


EXTRA_DIST = Makefile.cnee Makefile.cvs autotools/install-sh \
    test/bin/new_script.sh \
    test/etc/base_funs \
    test/test_all.sh \
    test/check_mem.sh \
    test/record/keyboard.sh \
    test/record/mouse.sh \
    test/scripts/options/all-events.sh \
    test/scripts/options/print-error-name.sh \
    test/scripts/options/print-error-names.sh \
    test/scripts/options/print-event-name.sh \
    test/scripts/options/print-event-names.sh \
    test/scripts/options/print-request-name.sh \
    test/scripts/options/print-request-names.sh \
    test/scripts/options/test_all.sh \
    test/scripts/record/keyboard.sh \
    test/scripts/record/mouse.sh \
    test/scripts/replay/keyboard.sh \
    test/scripts/replay/mouse.sh \
    test/scripts/resolution/mo-res.sh \
    test/scripts/timing/mo-time.sh \
    test/src/Makefile \
    test/src/xgetter.c 


man:
	( cd src ; make man )
