dnl Process this file with autoconf to produce a configure script.

AC_INIT(configure.in)

AC_CHECK_LIB(c, dlopen, LIBDL="", [AC_CHECK_LIB(dl, dlopen, LIBDL="-ldl")])
AC_CHECK_LIB(c, pthread_init, LIBDL="", [AC_CHECK_LIB(rt, pthread_init, LIBDL="-lrt")])

AM_INIT_AUTOMAKE(gnee, 0.1)
AM_CONFIG_HEADER(config.h)
AM_MAINTAINER_MODE

AC_ISC_POSIX
AC_PROG_CC
AM_PROG_CC_STDC
AC_HEADER_STDC
AC_PATH_XTRA

pkg_modules="gtk+-2.0 >= 2.0.0"
PKG_CHECK_MODULES(PACKAGE, [$pkg_modules])
AC_SUBST(PACKAGE_CFLAGS)
AC_SUBST(PACKAGE_LIBS)

GETTEXT_PACKAGE=gnee
AC_SUBST(GETTEXT_PACKAGE)
AC_DEFINE_UNQUOTED(GETTEXT_PACKAGE,"$GETTEXT_PACKAGE", [The gettext package])


# Process the option "--with-libxnee-dir="
AC_ARG_WITH(libxnee-dir,
	 [  --with-libxnee-dir   Specify the installation directory for libxnee ],
	 [case "${withval}" in
	  yes) AC_MSG_ERROR(Missing directory for --with-libxnee-dir);;
	  no) libxnee-dir=;;
	  *) if test -d "${withval}"; then libxnee_dir=${withval}; \
		  else AC_MSG_ERROR(invalid directory \"${withval}\" for --with-libxnee-dir); fi;;
	 esac],
	 libxnee_dir=)
AC_SUBST(libxnee_dir)


AC_ARG_ENABLE(xosd,
[  --enable-xosd       build Xnee with no verbose mode support],
[case "${enableval}" in
  yes) xosd=true ;;
  no)  xosd=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --disable-xosd) ;;
esac],[xosd=false])

AM_CONDITIONAL(XOSD, test x$xosd = xtrue)
AM_CONDITIONAL(HAVE_LIBXNEE_DIR, test x${libxnee_dir} != x)



dnl Add the languages which your application supports here.
ALL_LINGUAS=""
AM_GLIB_GNU_GETTEXT


AC_PROG_INSTALL
AC_PROG_CC
AC_LANG_C
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PATH_XTRA
AC_FUNC_VPRINTF
AC_CHECK_HEADERS(stdarg.h varargs.h, break)

AC_OUTPUT([
Makefile
src/Makefile
po/Makefile.in
])

