AC_INIT(src/main.c)
AC_CONFIG_AUX_DIR(./autotools/)
AM_INIT_AUTOMAKE(xnee,1.08d)

AC_CHECK_LIB(c, dlopen, LIBDL="", [AC_CHECK_LIB(dl, dlopen, LIBDL="-ldl")])
AC_CHECK_LIB(xosd, xosd_create, HAVE_XOSD_SUB=true,HAVE_XOSD_SUB=false)

AC_ARG_ENABLE(verbose,
[  --enable-verbose       build Xnee with no verbose mode support],
[case "${enableval}" in
  yes) verbose=true ;;
  no)  verbose=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --disable-verbose) ;;
esac],[verbose=true])

AC_ARG_ENABLE(buffer_verbose,
[  --enable-buffer_verbose  build xnee without support for buffer printouts],
[case "${enableval}" in
  yes) buffer_verbose=true ;;
  no)  buffer_verbose=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --disable-buffer_verbose) ;;
esac],[buffer_verbose=false])

AC_ARG_ENABLE(gcov,
[  --enable-gcov           build xnee with support for gcov],
[case "${enableval}" in
  yes) gcov=true ;;
  no)  gcov=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-gcov) ;;
esac],[gcov=false])

AC_ARG_ENABLE(gprof,
[  --enable-gprof          build xnee with support for gprof],
[case "${enableval}" in
  yes) gprof=true ;;
  no)  gprof=false ;;
  *) AC_MSG_ERROR(bad value ${enableval} for --enable-gprof) ;;
esac],[gprof=false])

AM_CONDITIONAL(VERBOSE, test x$verbose = xtrue)
AM_CONDITIONAL(GCOV, test x$gcov = xtrue)
AM_CONDITIONAL(GPROF, test x$gprof = xtrue)
AM_CONDITIONAL(BUF_VERBOSE, test x$buffer_verbose = xtrue)
AM_CONDITIONAL(HAVE_XOSD, test x$HAVE_XOSD_SUB = xtrue)

 
# Process the option "--with-libxnee-dir="
AC_ARG_WITH(libxnee-dir,
	 [  --with-libxnee-dir   Specify the installation directory for libxnee ],
	 [case "${withval}" in
	  yes) AC_MSG_ERROR(Missing directory for --with-libxnee-dir);;
	  no) libxnee-dir=;;
	  *) if test -d "${withval}"; then libxnee_dir=${withval}; \
		  else AC_MSG_ERROR(invalid directory \"${withval}\" for --with-libxnee-dir); fi;;
	 esac],
	 libxnee_dir=)
AC_SUBST(libxnee_dir)
AM_CONDITIONAL(HAVE_LIBXNEE_DIR, test x${libxnee_dir} != x)

AC_PROG_INSTALL
AC_PROG_CC
AC_LANG_C
AC_PROG_MAKE_SET
AC_PROG_RANLIB
AC_PATH_XTRA
AC_FUNC_VPRINTF
AC_CHECK_HEADERS(stdarg.h varargs.h, break)

AC_OUTPUT(Makefile src/Makefile  doc/Makefile )
